rhai/codegen/ui_tests/rhai_mod_non_clonable_return.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/rhai_mod_non_clonable_return.rs:12:35
   |
10 | #[export_module]
   | ---------------- in this procedural macro expansion
11 | pub mod test_mod {
12 |     pub fn test_fn(input: f32) -> NonClonable {
   |                                   ^^^^^^^^^^^ the trait `Clone` is not implemented for `NonClonable`
   |
note: required by a bound in `rhai::Dynamic::from`
  --> $WORKSPACE/src/types/dynamic.rs
   |
   |     pub fn from<T: Variant + Clone>(value: T) -> Self {
   |                              ^^^^^ required by this bound in `Dynamic::from`
   = note: this error originates in the attribute macro `export_module` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NonClonable` with `#[derive(Clone)]`
     |
3    + #[derive(Clone)]
4    | struct NonClonable {
     |
